--- a/public/wiki-article-graph.html
+++ b/public/wiki-article-graph.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
   <body>
     <script src="../build/wiki-article-graph/wiki-article-graph.js"></script>
   </body>
